# github_analyitics

./: .env.example  .gitignore  .~lock.github_analysis_file_timesheet.xlsx#  .~lock.github_analysis_with_file_timestamps.xlsx#  .~lock.github_analytics_timestamps_suite_run2.xlsx#  QUICKSTART.md  README.md  USER_GUIDE.md  _allowed_users.txt  _gh_user.txt  _smoke_duckdb_fix.duckdb  _smoke_local_parallel.duckdb  _smoke_timestamps.duckdb  _smoke_timestamps2.duckdb  _user_list.txt  _user_sample.txt  clone_and_analyze.py  collect_all_timestamps.py  generate_daily_hours.py  github_analytics.py  install.ps1  install.sh  local_git_analytics.py  pyproject.toml  requirements.txt  run_analysis.bat  run_report.sh  run_timestamp_suite.sh  setup.py  test_github_analytics.py  timesheet_from_timestamps.py  timestamp_suite.py  zfs_snapshot_git_timestamps.py
github_analyitics/: __init__.py
github_analyitics/analysis_tools/: __init__.py  example_usage.py  generate_daily_hours.py  timesheet_from_timestamps.py
github_analyitics/reporting/: __init__.py  clone_and_analyze.py  gh_cli.py  github_analytics.py  github_analytics_gh.py  report_paths.py  run_timestamp_suite.sh
github_analyitics/timestamp_audit/: __init__.py  (+8 more)
ride-never-ends/: .~lock.github_analytics_timestamps_suite.xlsx#  github_analytics_timestamps_suite.duckdb
scripts/: install_cli_tools.ps1  install_cli_tools.sh  install_github_cli.ps1  install_github_cli.sh
test/: run_feature_completeness.py  test_gh_cli_graphql.py  test_timestamp_spreadsheets.py  test_timestamp_suite_user_entrypoint.py
tests/: test_github_analytics.py
(+6 files in other folders)
